--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: battery_optimization_helper
-description: A Flutter plugin to disable or request disabling battery optimization on Android.
-version: 0.0.5
+description: A Flutter plugin to detect and request disabling Android battery optimization, with best‑effort OEM auto‑start shortcuts.
+version: 0.1.0
 homepage: https://github.com/thethtwe-dev/battery_optimization_helper
 repository: https://github.com/thethtwe-dev/battery_optimization_helper
 issue_tracker: https://github.com/thethtwe-dev/battery_optimization_helper/issues
