--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: battery_optimization_helper
 description: A Flutter plugin to detect and request disabling Android battery optimization, with best‑effort OEM auto‑start shortcuts.
-version: 0.1.3
+version: 0.2.0
 homepage: https://github.com/thethtwe-dev/battery_optimization_helper
 repository: https://github.com/thethtwe-dev/battery_optimization_helper
 issue_tracker: https://github.com/thethtwe-dev/battery_optimization_helper/issues
 
 environment:
-  sdk: ^3.7.2
-  flutter: '>=3.3.0'
+  sdk: ^3.8.0
+  flutter: '>=3.32.0'
 
 dependencies:
   flutter:
@@ -17,12 +17,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   
 flutter:
 
   plugin:
     platforms:
       android:
-        package: com.example.battery_optimization_helper
+        package: dev.thethtwe.batteryoptimizationhelper
         pluginClass: BatteryOptimizationHelperPlugin
